src/components/NotFound/NotFound.css
.not-found {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    max-width: 1280px;
    overflow: auto;
    margin: auto;
    padding: 246px 0 0;
    background-color: #fff;
}

.not-found__title {
    font-weight: 400;
    font-size: 140px;
    line-height: 169px;
    margin: 0;
}

.not-found__text {
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
    margin: 0;
    padding: 5px 0 0;
}

.not-found__back-link {
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    color: #3456F3;
    text-decoration-line: none;
    padding-top: 184px;
    transition: all .3s linear 0s;
    margin: auto;
}

.not-found__back-link:hover {
    opacity: .5;
}

.not-found__back-link:active {
    transform: scale(0.9);
}

@media screen and (min-width: 768px) and (max-width: 1279px) {

    .not-found {
        padding: 408px 0 0;
    }
}

@media screen and (max-width: 767px) {

    .not-found {
        padding: 329px 0 0;
    }

    .not-found__title {
        font-size: 80px;
        line-height: 97px;
    }
    
    .not-found__text {
        font-size: 12px;
        line-height: 15px;
        padding: 10px 0 0;
    }

    .not-found__back-link {
        padding-top: 284px 0 0;
    }

}

@media screen and (max-width: 480px) {

    .not-found__back-link:hover {
        opacity: 1;
    }
    
    .not-found__back-link:active {
        transform: none;
    }

    .not-found__back-link {
        font-size: 12px;
        line-height: 15px;
        padding-top: 284px 0 0;
    }

}

